# Python-for-data-science

./: README.md
Python-3-OOP/: README.md
Python-3-OOP/ex00/: S1E9.py
Python-3-OOP/ex01/: S1E7.py  tester.py
Python-3-OOP/ex02/: DiamondTrap.py  S1E9.py
Python-3-OOP/ex03/: ft_calculator.py
Python-3-OOP/ex04/: ft_calculator.py
ex00/: Hello.py  give_bmi.py  load_csv.py
ex01/: aff_life.py  array2D.py  format_ft_time.py
ex02/:  aff_pop.py  aff_pop.py  load_image.py
ex03/: zoom.py
ex04/: rotate.py
ex05/: pimp_image.py  tester.py
ex07/: sos.py
ex08/: Loading.py
ex09/: LICENSE
ex09/ft_package.egg-info/: PKG-INFO
python-0-starting/: README.md
python-0-starting/ex03/: NULL_not_found.py
python-0-starting/ex06/: filterstring.py
python-0-starting/ex09/: README.md  pyproject.toml
python-0-starting/ex09/ft_package/: __init__.py  count_in_list.py
python-0-starting/ex09/ft_package.egg-info/: SOURCES.txt
python-1-array/: README.md
python-1-array/ex00/: give_bmi.py
python-1-array/ex03/: zoom.py
python-1-array/ex05/: pimp_image.py
python-2-datatable/ex01/: load_csv.py
python-2-datatable/ex03/: projection_life.py
python-4-dod/: README.md
python-4-dod/ex00/: statistics.py
python-4-dod/ex01/: in_out.py
python-4-dod/ex02/: callLimit.py
python-4-dod/ex03/: new_student.py  tester.py
