[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name="kkouaz", email="kkouaz@42.fr" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/kkouaz/ft_package"
